--- a/src/containers/CoursesPanel/index.scss
+++ b/src/containers/CoursesPanel/index.scss
@@ -8,8 +8,8 @@
 }
 
 .course-list-title {
-  font-size: $h2-font-size;
-  margin: map-get($spacers, 3) 0;
+  font-size: 3rem;
+  margin: 2rem 0;
 }
 
 .course-list-loading {
