--- a/src/App.scss
+++ b/src/App.scss
@@ -3,13 +3,15 @@
 @import "~@edx/brand/paragon/variables";
 @import "~@openedx/paragon/scss/core/core";
 @import "~@edx/brand/paragon/overrides";
+@import "~@edx/brand/paragon/variables";
+@import "~@edx/brand/paragon/fonts";
 
 $fa-font-path: "~font-awesome/fonts";
 @import "~font-awesome/scss/font-awesome";
 
 $input-focus-box-shadow: $input-box-shadow; // hack to get upgrade to paragon 4.0.0 to work
 
-@import "~@edx/frontend-component-footer/dist/_footer";
+// @import "~@edx/frontend-component-footer/dist/_footer";
 
 .text-ellipsis {
   overflow: hidden;
