--- a/src/containers/CourseCard/components/CourseCardDetails/index.scss
+++ b/src/containers/CourseCard/components/CourseCardDetails/index.scss
@@ -1,7 +1,5 @@
 @import "~@edx/brand/paragon/variables";
 @import "~@openedx/paragon/scss/core/core";
 @import "~@edx/brand/paragon/overrides";
+@import "~@edx/brand/paragon/variables";
 
-a.course-card-title {
-  color: $black;
-}
